# dd-logging

./: README.md  pyproject.toml
dd_logging/: __init__.py  core.py
